# Guest_welcoming

./: .gitignore  CMakeLists.txt  README.md  detection.py  package.xml
launch/: ai_host.launch
msg/: FaceRecognition.msg  face_cord_list.msg
scripts/: MainWindown_ui.py  app.py  dialog_ui.py  face_detection.py  face_matching_node.py
